--- a/themes/ohia/scss/_tiki-selectors.scss
+++ b/themes/ohia/scss/_tiki-selectors.scss
@@ -127,6 +127,11 @@ body.fullscreen {
     &.bg-warning { color: #000 !important; }
 }
 
+// Modals
+.modal-header .btn-close {
+    background-color: #fff;
+}
+
 // Breadcrumbs
 .breadcrumb {
     display: inline-block;
