--- a/themes/ohia/scss/_variables.scss
+++ b/themes/ohia/scss/_variables.scss
@@ -267,6 +267,7 @@ $badge-active-color: $link-color;
 $badge-active-bg: #ffffff;
 
 // Modals
+$modal-content-color: $body-color;
 $modal-content-bg: $body-bg;
 $modal-content-border-color:rgba(0,0,0,.2);
 $modal-backdrop-bg:darken(#d9534f,30%);
